fixed minor styling issues in portfolio section, minor bug found on cards with text overlapping container height on main presentation

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,7 @@ nav,
 
 /* PORTFOLIO STYLING  */
 
-.bg-port,
-body {
+.bg-port {
     background-image: url('/assets/images/manada_background.png');
     background-position: fixed;
     background-size: cover;
